<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="id.kosan.mgmapp.HomeActivity">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/home2"
            android:textAlignment="center"
            android:background="@color/colorPrimaryHome"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:contentDescription="Home Image"
            android:id="@+id/imageView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/welcome1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold|italic"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/welcome2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/welcome3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:text=" "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/welcome4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/welcome5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/welcome6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:text="Selanjutnya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:id="@+id/btnNext"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/button_white"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
